--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,57 @@
 body {
     background-color: #AFF4C6
+    
   }
 
-h1 {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 15px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .card {
+    aspect-ratio: 3/7;
+    width: 100%;
+    border-radius: 0px;
+    position: relative;
+    transition: all 400ms ease;
+    transform-style: preserve-3d;
+    background-color: #ffb6aa;
+  }
+  
+
+  .face {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-size: cover;
+    background-position: center;
+    border: 5px #ffb6aa;
+    border-radius: 0px;
+    transition: all 400ms ease;
+  }
+  
+.front img {
+    background-color: #ffb6aa ;
+    height: 30px;
+
+  }
+
+.back {
+   background-color: antiquewhite ; 
+   backface-visibility: hidden;
+}
+
+ h1 {
     text-align: center;
     font-family: "raleway";
     font-weight: 100;
     margin-top: 50px;
 }
-.todosbotoes {
+/* .todosbotoes {
     max-width: 360px;
     text-align: center;
 }
@@ -44,4 +87,4 @@ h1 {
     opacity: 20%;
     background: white;
   }
-  
+    */
